deploy/kustomize/authproxy-demo/overlays/demo/authproxy-secrets.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authproxy
spec:
  template:
    spec:
      containers:
        - name: authproxy
          volumeMounts:
            - mountPath: /etc/authproxy/keys/actors
              $patch: delete
            - name: actors-keys
              mountPath: /etc/authproxy/keys/actors/root
      volumes:
        - name: jwt-keys
          secret:
            secretName: demo-jwt
        - name: encryption-keys
          secret:
            secretName: demo-encryption
        - name: actors-keys
          secret:
            secretName: demo-actors
