deploy/kustomize/authproxy-demo/overlays/demo/demo-shell-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-shell
spec:
  template:
    spec:
      containers:
        - name: demo-shell
      volumes:
        - name: admin-key
          secret:
            secretName: demo-demo-shell-key
            items:
              - key: private
                path: private
        - name: jwt-key
          secret:
            secretName: demo-jwt
            items:
              - key: system
                path: system
